@@ -9,12 +9,14 @@
   - More abbrevs to ~init-abbrevs.el~
   - Keybinding =f= to open =xref= definition in the same window.
   - Enable =recentf-mode=. Call with ~M-x recent-open*~.
+  - Keybinding =C-c t= to start terminal emulator.
 
 *** Changed:
   - Improve =rust-mode= usability.
   - Improve =php-mode= usability.
-  - Tweak editing and search usability.
+  - Improve editing and search usability.
   - Configure =xref= to use =ripgrep= when it's available.
+  - Better =term-mode= usability.
 
 ** v2.0.0 - 2022-04-07
 
